# CppHDL

./: .gitignore  .gitmodules  AGENTS.md  AI_CODING_GUIDELINES.md  CMakeLists.txt  Compare.md  HANDOFF.md  PHASE1-REVISED-PLAN.md  PLAN.md  PLAN2.md  QUICK_REFERENCE.md  READING-GUIDE.md  README.md  benchmark_tracker.sh  bits_usage_summary.md  build.sh  bundle1.dot  counter.dot  counter.v  findings.md  perf_results.csv  progress.md  run_all_ported_tests.sh  run_perf_comparison.sh  sim.ini  stream_mux_test.dag  task_plan.md  test_axi_i2c.v  trace.ini
examples/: CMakeLists.txt  adder_module.cpp  async_fifo.cpp  counter_module.cpp  dual_clock_module.cpp  dual_port_ram.cpp  simple_module.cpp  stream_example.cpp  sync_fifo.cpp  vec_and_struct.cpp
examples/axi4/: AGENTS.md  CMakeLists.txt  axi4_full_example.cpp  axi4_lite_example.cpp  axi_soc_example.cpp  phase3a_complete.cpp
examples/riscv/: CMakeLists.txt  phase3b_complete.cpp  phase3b_minimal.cpp  rv32i_minimal.cpp  rv32i_phase1_test.cpp  rv32i_phase2_test.cpp  rv32i_phase3_test.cpp  rv32i_test.cpp
examples/riscv-mini/: AGENTS.md  CMakeLists.txt  phase3b_complete.cpp  phase3b_minimal.cpp  rv32i_minimal.cpp  rv32i_phase1_test.cpp  rv32i_phase2_test.cpp  rv32i_phase3_test.cpp  rv32i_test.cpp
examples/riscv-mini/plans/: cleanup_plan.md  discovery_findings.md
examples/riscv-mini/src/: branch_predictor_v2.h  dynamic_branch_predict.h  hazard_unit.h  rv32i_alu.h  rv32i_branch_predict.h  rv32i_core.h  rv32i_forwarding.h  rv32i_hazard_complete.h  rv32i_pipeline.h  rv32i_pipeline_cache.h  rv32i_pipeline_regs.h  rv32i_pipeline_top.h  rv32i_regs.h  rv32i_soc.h  rv32i_system.h
examples/riscv-mini/tests/: CMakeLists.txt  benchmark_pipeline.cpp  minitest_prog.h  test_cache_pipeline_integration.cpp  test_csr_unit.cpp  test_ex_stage.cpp  test_forwarding_hazard_integration.cpp  test_hazard_compile.cpp  test_hazard_complete.cpp  test_hazard_minimal.cpp  test_ifstage_device.cpp  test_interrupt_flow.cpp  test_mem_stage.cpp  test_phase4_integration.cpp  test_pipeline_debug.cpp  test_pipeline_debug2.cpp  test_pipeline_debug3.cpp  test_wb_stage.cpp  (+16 more)
examples/soc/: cpphdl_soc.cpp  hello_world.cpp
examples/spinalhdl-ported/: AGENTS.md  README.md  testbench_template.cpp
examples/stream/: CMakeLists.txt  stream_demux_demo.cpp  stream_fork_demo.cpp  stream_mux_demo.cpp
examples/verilator/: 01_minimal_counter.cpp  02_counter_with_input.cpp  03_component_style.cpp  CMakeLists.txt
samples/: AGENTS.md  CMakeLists.txt  advanced_pod_bundle_serialization.cpp  axi_lite_demo.cpp  bundle_advanced_features.cpp  bundle_demo.cpp  bundle_pod_generation.cpp  bundle_serialization_demo.cpp  bundle_simulator_demo.cpp  bundle_top_example.cpp  conditional_demo.cpp  configured_trace_example.cpp  counter.cpp  counter.o.cpp  dag_compare.cpp  destruction.cpp  feedback_counter.cpp  fifo.cpp  fifo_bundle.cpp  fifo_example.cpp  fragment_example.cpp  handshake.cpp  if_demo.cpp  large_pod_bundle_example.cpp  minimal_fifo_bundle.cpp  nested_bundle_demo.cpp  nested_fragment_demo.cpp  onehot_example.cpp  pipeline.cpp  pod_bundle_conversion.cpp  precise_width_demo.cpp  precise_width_example.cpp  shift_register.cpp  simple_io.cpp  spinalhdl_component_function_area_example.cpp  spinalhdl_stream_example.cpp  stream.cpp  stream_arbiter_example.cpp  stream_component_example.cpp  stream_demux_example.cpp  (+8 more)
tests/: AGENTS.md  CMakeLists.minimal.txt  CMakeLists.txt  README.md  test_axi_dma.cpp  test_axi_i2c.cpp  test_axi_lite_bundle.cpp  test_axi_pwm.cpp  test_axi_pwm_simple.cpp  test_axi_spi.cpp  test_basic.cpp  test_bits_update.cpp  test_bitvector.cpp  test_blt_debug.cpp  test_bool_connection.cpp  test_branch_predict.cpp  test_bundle.cpp  test_bundle_advanced.cpp  test_bundle_advanced_features.cpp  test_bundle_bitstream.cpp  test_bundle_connection.cpp  test_bundle_large.cpp  test_bundle_node_management.cpp  test_bundle_serialization.cpp  test_bv_cmp.cpp  test_bv_truncate.cpp  test_ch_flow.cpp  test_ch_reg_bitwise.cpp  test_ch_stream.cpp  test_comparison_ops.cpp  test_error_reporting.cpp  test_fifo.cpp  test_fifo_example.cpp  test_forwarding.cpp  test_fragment.cpp  test_interpreter_jit_compat.cpp  test_io_extended_ops.cpp  test_io_operations.cpp  test_jit_compiler.cpp  test_jit_concat.cpp  (+58 more)
tests/benchmark/: CMakeLists.txt  README.md  perf_baseline.json  perf_main.cpp  perf_regression.cpp  perf_timer.h  report_generator.h  stats_collector.h  subprocess_runner.h  test_build_us_present.cpp  test_jit_reg_perf.cpp  test_jit_smallgraph.cpp  test_jit_vs_interp_ratio.cpp  test_perf_subprocess_isolation.cpp  test_phase4_coremark.cpp  test_report_consistency.cpp  test_verilator_integration.cpp  verilator_harness_tc07.cpp  verilator_harness_tc08.cpp  verilator_runner.h
tests/chlib/: AGENTS.md  test_arithmetic.cpp  test_arithmetic_advance.cpp  test_assert.cpp  test_axi4lite.cpp  test_bitwise.cpp  test_branch_predictor_v2.cpp  test_cache_complete.cpp  test_cache_full.cpp  test_cache_pipeline_integration.cpp  test_cache_simple.cpp  test_cam.cpp  test_chfifo.cpp  test_combinational.cpp  test_converter.cpp  test_fifo.cpp  test_forwarding.cpp  test_hazard_complete.cpp  test_if_stmt.cpp  test_logic.cpp  test_memory.cpp  test_onehot.cpp  test_phase4_integration.cpp  test_pipeline.cpp  test_selector_arbiter.cpp  test_selector_priority.cpp  test_selector_round_robin.cpp  test_sequential.cpp  test_simulator_trace.cpp  test_stream.cpp  test_stream_mux_demux.cpp  test_switch.cpp
tests/cpu/: test_branch_predictor_v2.cpp  test_forwarding.cpp  test_hazard_complete.cpp
tests/jit/: test_jit_golden.cpp
tests/output/: axi_pwm.v  axi_spi.v
tests/riscv/: CMakeLists.txt  benchmark_pipeline.cpp  test_branch_predictor_v2.cpp  test_cache_pipeline_integration.cpp  test_ex_stage.cpp  test_forwarding.cpp  test_forwarding_hazard_integration.cpp  test_hazard_compile.cpp  test_hazard_complete.cpp  test_mem_stage.cpp  test_phase4_integration.cpp  test_pipeline_integration.cpp  test_wb_stage.cpp
tests/riscv-integration/: test_cache_pipeline_integration.cpp  test_phase4_integration.cpp  test_pipeline_integration.cpp
(+627 files in other folders)
